# anki-telegram

./: .env.example  .gitignore  CLAUDE.md  README.md  anki-telegram.service  pyproject.toml
assets/: demo.webm
src/anki_telegram/: ai.py  anki_store.py  bot.py
tests/: test_helpers.py
